--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-git+git://github.com/dataprojectswithMJ/twint.git
 ar_wordcloud==0.0.4
 matplotlib==3.3.4
 nltk==3.6.1
@@ -8,4 +7,6 @@ PyArabic==0.6.14
 scikit_learn==1.0.2
 seaborn==0.11.1
 streamlit==1.7.0
+twint==2.1.21
+git+git://github.com/dataprojectswithMJ/twint.git
 wordcloud==1.8.1
