--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/Users/ameedal-tamimi/opt/anaconda3/bin/python"
+    "python.pythonPath": "/Users/ameedal-tamimi/.pyenv/shims/python"
     
 }
