--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-twint==2.1.9
 ar_wordcloud==0.0.4
 matplotlib==3.3.4
-nltk==3.6.1
 numpy==1.20.1
 pandas==1.2.4
 PyArabic==0.6.14
+pymongo==4.1.0
 scikit_learn==1.0.2
 seaborn==0.11.1
 streamlit==1.7.0
+twint==2.1.21
 wordcloud==1.8.1
-click<=8.0.4
-
