--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ matplotlib==3.3.4
 nltk==3.6.1
 numpy==1.20.1
 pandas==1.2.4
+Pillow==9.1.0
 PyArabic==0.6.14
 pymongo==4.1.0
 pymysql==1.0.2
@@ -12,3 +13,4 @@ streamlit==1.7.0
 git+https://github.com/amedtamimi/twint-1.git
 wordcloud==1.8.1
 click<=8.0.4
+
